change slider height + fix body overflow

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,6 +20,6 @@
 @import "ui/views/galleryPage/galleryPage";
 
 body {
-  overflow: hidden;
+  //overflow: hidden;
   position: absolute;
 }
